<resources>
    <string name="app_name">JustDoIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_pass">Enter your Password</string>
    <string name="reenter_your_pass">Re-Enter your Password</string>
    <string name="get_to_it">Get to it:)</string>
    <string name="already_doing_it">Already Doing It?</string>
    <string name="not_doing_it">Not Doing It?</string>

    <string name="justdoit">JustDoit</string>
    <string name="do_it">Do It</string>
    <string name="start_doing_it">Start Doing It:)</string>
    <string name="type_your_task">Type your task</string>


</resources>